--- a/WebSite/Views/Shared/_Layout.cshtml
+++ b/WebSite/Views/Shared/_Layout.cshtml
@@ -3,25 +3,39 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebSite</title>
+    <title>@ViewData["Title"] WebSite</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     
 </head>
 <body>
     <header>
-        <nav class="sticky-top py-1 navbar navbar-dark bg-dark">
-            <div class="container d-flex flex-column flex-md-row justify-content-between navbar-nav">
-                <a class="py-2" href="#" aria-label="Product">
-                    <svg viewBox="0 0 512 512" height="24" fill="#FFFFFF" width="24" xmlns="http://www.w3.org/2000/svg"><title>Logo Pwa</title><path d='M330.7 352l77.72-192H356.9l-53.16 124.07L265.93 160h-39.61l-40.58 124.07-28.63-56.53-25.9 79.46 26.3 45h50.7l36.68-111.27 35 111.27zM48.79 286.09h31.65a93.39 93.39 0 0025.62-3.21l8.18-25.19 22.88-70.39a55.75 55.75 0 00-6-7.82Q113.54 160 79.59 160H0v192h48.79zm41.9-81.92q6.89 6.92 6.88 18.52t-6 18.53q-6.64 7.62-24.44 7.61H48.79v-51.58h18.42q16.59 0 23.48 6.92zm286.16 113.44l14.79-37.25h42.69l-20.26-56.51L439.41 160 512 352h-53.53l-12.4-34.39z' /></svg>
-                </a>               
-                <a class="py-2 d-none d-md-inline-block nav-link " href="#">Tour</a>
-                <a class="py-2 d-none d-md-inline-block nav-link" href="#">Product</a>
-                <a class="py-2 d-none d-md-inline-block nav-link" href="#">Features</a>
-                <a class="py-2 d-none d-md-inline-block nav-link" href="#">Enterprise</a>
-                <a class="py-2 d-none d-md-inline-block nav-link" href="#">Support</a>
-                <a class="py-2 d-none d-md-inline-block nav-link" href="#">Pricing</a>
-                <a class="py-2 d-none d-md-inline-block nav-link" href="#">Cart</a>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Toyota</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarsExample03">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown03">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                </ul>                
             </div>
         </nav>
     </header>
