--- a/WebSite/Views/Home/Index.cshtml
+++ b/WebSite/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                     <div class="container">
                         <div class="carousel-caption ">
                             <h2> @Model.Cars.FirstOrDefault(x => x.CarId == 1).Model</h2>
-                            <p>@Model.DescriptionCars.FirstOrDefault(x => x.DescriptionCarId == 1).Header</p>
+                            <p>@Model.DescriptionCars.FirstOrDefault(x => x.DescriptionCarId == 2).Header</p>
                             <p><a class="btn btn-lg btn-primary" href="#" role="button">Узнать больше</a></p>
                         </div>
                     </div>
@@ -73,17 +73,17 @@
                     <div class="container">
                         <div class="carousel-caption">
                             <h2> @Model.Cars.FirstOrDefault(x => x.CarId == 2).Model</h2>
-                            <p>@Model.DescriptionCars.FirstOrDefault(x => x.DescriptionCarId == 4).Header</p>
+                            <p>@Model.DescriptionCars.FirstOrDefault(x => x.DescriptionCarId == 1).Header</p>
                             <p><a class="btn btn-lg btn-primary" href="#" role="button">Узнать больше</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item active carousel-item-left">
-                    <img class="img-thumbnail" src="@Model.Cars.FirstOrDefault(x => x.CarId == 4).img" />
+                    <img class="img-thumbnail" src="" />
                     <div class="container">
                         <div class="carousel-caption">
-                            <h2> @Model.Cars.FirstOrDefault(x => x.CarId == 4).Model</h2>
-                            <p>@Model.DescriptionCars.FirstOrDefault(x => x.DescriptionCarId == 6).Header</p>
+                            <h2></h2>
+                            <p></p>
                             <p><a class="btn btn-lg btn-primary" href="#" role="button">Узнать больше</a></p>
                         </div>
                     </div>
